// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateTask throw when the caller is not a team member 1`] = `"{\\"_error\\":\\"You do not have access to team 0\\"}"`;

exports[`updateTask updates the content of the task 1`] = `
Object {
  "task": Object {
    "assigneeId": 3,
    "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Updated content\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
    "createdAt": 2017-01-01T06:59:59.999Z,
    "createdBy": 1,
    "id": 0,
    "sortOrder": 0,
    "status": "active",
    "tags": Array [],
    "teamId": 2,
    "updatedAt": 2017-01-01T08:00:00.000Z,
    "userId": 1,
  },
  "taskHistory": Array [
    Object {
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Updated content\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "id": 4,
      "tags": Array [],
      "taskId": 0,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
}
`;

exports[`updateTask updates the content of the task quickly and do not trigger a new history item 1`] = `
Object {
  "task": Object {
    "assigneeId": 3,
    "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Updated content\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
    "createdAt": 2017-01-01T06:59:59.999Z,
    "createdBy": 1,
    "id": 0,
    "sortOrder": 0,
    "status": "active",
    "tags": Array [],
    "teamId": 2,
    "updatedAt": 2017-01-01T08:00:00.000Z,
    "userId": 1,
  },
  "taskHistory": Array [
    Object {
      "assigneeId": 3,
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Updated content\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "id": 4,
      "status": "active",
      "tags": Array [],
      "taskId": 0,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
}
`;

exports[`updateTask updates the sortOrder without changing updatedAt or making a history item 1`] = `
Object {
  "task": Object {
    "assigneeId": 3,
    "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
    "createdAt": 2017-01-01T06:59:59.999Z,
    "createdBy": 1,
    "id": 0,
    "sortOrder": 2,
    "status": "active",
    "tags": Array [],
    "teamId": 2,
    "updatedAt": 2017-01-01T07:00:00.000Z,
    "userId": 1,
  },
  "taskHistory": Array [],
}
`;

exports[`updateTask updates the status of the task 1`] = `
Object {
  "task": Object {
    "assigneeId": 3,
    "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
    "createdAt": 2017-01-01T06:59:59.999Z,
    "createdBy": 1,
    "id": 0,
    "sortOrder": 0,
    "status": "done",
    "tags": Array [],
    "teamId": 2,
    "updatedAt": 2017-01-01T08:00:00.000Z,
    "userId": 1,
  },
  "taskHistory": Array [
    Object {
      "id": 4,
      "status": "done",
      "taskId": 0,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
}
`;

exports[`updateTask updates the teamMember of the task slowly and trigger a new history item 1`] = `
Object {
  "task": Object {
    "assigneeId": 3,
    "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
    "createdAt": 2017-01-01T06:59:59.999Z,
    "createdBy": 1,
    "id": 0,
    "sortOrder": 0,
    "status": "active",
    "tags": Array [],
    "teamId": 2,
    "updatedAt": 2017-01-01T08:00:00.000Z,
    "userId": 1,
  },
  "taskHistory": Array [
    Object {
      "assigneeId": 3,
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "id": 4,
      "status": "active",
      "taskId": 0,
      "updatedAt": 2017-01-01T07:00:00.000Z,
    },
    Object {
      "assigneeId": 3,
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "id": 5,
      "status": "active",
      "taskId": 0,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
}
`;
